.ops/knative/service.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: openleap-registry
  namespace: default
spec:
  runLatest:
    configuration:
      revisionTemplate:
        metadata:
          annotations:
            autoscaling.knative.dev/minScale: "1"
            autoscaling.knative.dev/maxScale: "5"
        spec:
          container:
            image: docker.io/openleap/openleap-registry:latest
            ports:
              - containerPort: 8761
